--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
+        "nicolaslopezj/searchable": "^1.9",
         "predis/predis": "^1.1",
         "tymon/jwt-auth": "1.0.0-rc.1"
     },
