--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "naux/sendcloud": "^1.1",
         "nicolaslopezj/searchable": "^1.9",
         "predis/predis": "^1.1",
-        "tymon/jwt-auth": "1.0.0-rc.1"
+        "tymon/jwt-auth": "1.0.0-rc.1",
+        "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.4",
